tests/rosetta/out/C/abundant-deficient-and-perfect-number-classifications.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int pfacSum(int i) {
  int sum = 0;
  int p = 1;
  while (p <= i / 2) {
    if (i % p == 0) {
      sum = sum + p;
    }
    p = p + 1;
  }
  return sum;
}

int main() {
  int d = 0;
  int a = 0;
  int pnum = 0;
  int i = 1;
  while (i <= 20000) {
    int j = pfacSum(i);
    if (j < i) {
      d = d + 1;
    }
    if (j == i) {
      pnum = pnum + 1;
    }
    if (j > i) {
      a = a + 1;
    }
    i = i + 1;
  }
  char *tmp1 = _str(d);
  char *tmp2 = concat_string("There are ", tmp1);
  char *tmp3 = concat_string(tmp2, " deficient numbers between 1 and 20000");
  printf("%s\n", tmp3);
  char *tmp4 = _str(a);
  char *tmp5 = concat_string("There are ", tmp4);
  char *tmp6 = concat_string(tmp5, " abundant numbers  between 1 and 20000");
  printf("%s\n", tmp6);
  char *tmp7 = _str(pnum);
  char *tmp8 = concat_string("There are ", tmp7);
  char *tmp9 = concat_string(tmp8, " perfect numbers between 1 and 20000");
  printf("%s\n", tmp9);
}

int main() {
  main();
  return 0;
}
